[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/Start/SomeDialog.gd" type="Script" id=1]
[ext_resource path="res://addons/Rakugo/nodes/root_node2d.gd" type="Script" id=2]
[ext_resource path="res://game/Start/StartCombat.gd" type="Script" id=3]
[ext_resource path="res://game/Characters/Godette.tscn" type="PackedScene" id=5]

[node name="Start" type="Node2D"]
script = ExtResource( 2 )

[node name="CombatDialog" type="Node" parent="."]
script = ExtResource( 1 )
begin_from = [ "Start", "combat_dialog" ]
dialogs_names = [ "combat_dialog" ]

[node name="StartCombat" type="Node" parent="."]
script = ExtResource( 3 )
party = [ ExtResource( 5 ) ]
[connection signal="loop" from="CombatDialog" to="CombatDialog" method="_on_CombatDialog_loop"]
[connection signal="start_combat" from="CombatDialog" to="StartCombat" method="_on_CombatDialog_start_combat"]
